# firework3

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  evaluations-combined.txt  fireworks-combined.txt
.github/workflows/: ci.yml  deploy.yml
db/: Dockerfile  seed.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  agent-orchestrator.yaml  mcp-servers.yaml  migrate-job.yaml  web-form.yaml
evaluations/: .gitignore  __init__.py  harness.py  metrics.py  runner.py
evaluations/datasets/: appointment_happy_path.json  appointment_outside_hours_rejected.json  appointment_unverified_patient_rejected.json  cancellation_then_reschedule_offer.json  reschedule_happy_path.json  reschedule_to_taken_slot_rejected.json
infrastructure/: main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/environments/: dev.tfvars  prod.tfvars
mcp-servers/mcp-calendar/: Dockerfile  pyproject.toml  server.py
mcp-servers/mcp-calendar/providers/: __init__.py
mcp-servers/mcp-email/: Dockerfile  pyproject.toml  server.py
mcp-servers/mcp-email/providers/: __init__.py
mcp-servers/mcp-resource-details/: Dockerfile  pyproject.toml  server.py
services/agent-orchestrator/: Dockerfile  pyproject.toml
services/agent-orchestrator/app/: agent.py  agent_llm.py  audit.py  consumer.py  firewall.py  guardrail.py  llm.py  repository.py  state_machine.py  tools.py  workflow.py
services/agent-orchestrator/scripts/: inject.py
services/agent-orchestrator/tests/: conftest.py  test_guardrail.py  test_orchestration.py  test_scenarios.py  test_state_machine.py
services/agent-orchestrator/tests/scenarios/: appointment_happy_path.json  cancellation_then_reschedule_offer.json  reschedule_to_taken_slot_rejected.json
services/shared/: pyproject.toml
services/shared/apptshared/: __init__.py  config.py  db.py  mcpclient.py  models.py  queue.py  schemas.py  timeutils.py
services/web-form/: Dockerfile  pyproject.toml
services/web-form/app/: auth.py  availability.py  bookings.py  main.py  schema.py
services/web-form/app/static/: index.html
