[project]
name = "agent-orchestrator"
version = "0.1.0"
description = "Agentic orchestrator: deterministic guardrail + workflow state machine + LLM agent"
requires-python = ">=3.12"
dependencies = [
    "apptshared",
    "azure-servicebus>=7.12",
]

[project.optional-dependencies]
foundry = ["azure-ai-projects>=1.0.0b7", "azure-identity>=1.17"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
apptshared = { path = "../shared", editable = true }