[project]
name = "apptshared"
version = "0.1.0"
description = "Shared schemas, config, and helpers for the appointment scheduling system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apptshared"]
