[project]
name = "web-form"
version = "0.1.0"
description = "GraphQL edge service: appointment form, availability, magic-link auth"
requires-python = ">=3.12"
dependencies = [
    "apptshared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "strawberry-graphql[fastapi]>=0.235",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
apptshared = { path = "../shared", editable = true }
